--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "discord.js": "^11.3.2",
     "moment": "^2.22.2",
     "redis": "^2.8.0",
+    "sqlite": "^2.9.2",
     "tsubaki": "^1.3.1",
     "winston": "^3.0.0"
   },
